fixed some layout issue

--- a/source/css/_common.css.sass
+++ b/source/css/_common.css.sass
@@ -43,7 +43,6 @@ header
 
     ul
       list-style: none
-
     li
       float: left
       margin-right: 1em
@@ -54,10 +53,10 @@ header
     +breakpoint($b-desktop)
       font-size: $fz-l
       li:first-child
-        margin-left: 12em
+        margin-left: 11em
     +breakpoint($b-xlarge)
       li:first-child
-        margin-left: 25em
+        margin-left: 28em
 
   .pages-logo
     float: left
